--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="scrollbar-thin scrollbar-track-zinc-800 scrollbar-thumb-zinc-500">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Maria Rodriguez - Portfolio </title>
-    <link rel="shortcut icon" href="/src/assets/icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/src/assets/developer.png" type="image/x-icon">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
